Inmob-Salesforce/force-app/main/default/objects/Permiso_a_Cuenta__c/Permiso_a_Cuenta__c.object-meta.xml
<CustomObject>
    <label>Permiso a Cuenta</label>
    <nameField>
        <label>Nombre de Permiso a Cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permisos a Cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>