Inmob-Salesforce/force-app/main/default/objects/Permiso_a_Cuenta__c/fields/CI_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CI_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Permisos a Cuenta</relationshipLabel>
    <relationshipName>Permisos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>