Inmob-Salesforce/force-app/main/default/objects/Permiso_a_Cuenta__c/fields/CI_Permite_Edicion__c.field-meta.xml
<CustomField>
    <fullName>CI_Permite_Edicion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Permite Edición?</label>
    <type>Checkbox</type>
</CustomField>