Inmob-Salesforce/force-app/main/default/objects/Permiso_a_Cuenta__c/fields/CI_Propietario__c.field-meta.xml
<CustomField>
    <fullName>CI_Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Permisos_a_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>