Inmob-Salesforce/force-app/main/default/objects/Permiso_a_Cuenta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CI_Cuenta__c</columns>
    <columns>CI_Oportunidad__c</columns>
    <columns>CI_Proyecto__c</columns>
    <columns>CI_Propietario__c</columns>
    <columns>CI_Permite_Edicion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CI_Oportunidad__c</field>
        <operation>equals</operation>
        <value>PAUL CRUZ</value>
    </filters>
    <label>Todos</label>
</ListView>